--- a/_posts/2012-12-22-TYPO.md
+++ b/_posts/2012-12-22-TYPO.md
@@ -20,6 +20,8 @@ keywords: Markdown
     </li>
 </ol>
 
+<!-- more -->
+
 <h2 id="section1">一、关于 TYPO.CSS</h2>
 <p><em>TYPO.CSS</em> 的目的是，在一致化浏览器排版效果的同时，构建最适合中文阅读的网页排版。</p>
 <h4>现状和如何去做：</h4>
