--- a/_posts/2012-12-22-TYPO.md
+++ b/_posts/2012-12-22-TYPO.md
@@ -1,9 +1,9 @@
 ---
 layout: post
 title: 中文网页重设与排版：TYPO.CSS
-description: Markdown 语法的一些知识点的记录，例如如何写标题，写列表，写 table 等。
-keywords: Markdown
-category: "Markdown"
+description: css typo
+keywords: css
+category: "css"
 ---
 <ol id="table">
     <li><a href="#section1">关于 TYPO.CSS</a></li>
