--- a/_posts/2013-07-21-cssbug.md
+++ b/_posts/2013-07-21-cssbug.md
@@ -3,13 +3,13 @@ layout: post
 title: css常见bug
 description: css常见bug、积攒多年的css常见bug
 keywords: css
-categories: [css, 前端]
+category: "css"
 ---
 
 ####IE6如何定义高度很小的容器
 
 ```css
-#test{ overflow: hidden; height: 1px; font-size: 0; line-height: 0;}
+div{ overflow: hidden; height: 1px; font-size: 0; line-height: 0;}
 ```
  
 ####IE6下min-height兼容问题?
