--- a/_posts/2015-08-10-js-this.md
+++ b/_posts/2015-08-10-js-this.md
@@ -49,7 +49,7 @@ person(); //输出 xl
 
 同样这个地方`person`作为`window`的方法来调用，在代码的一开始定义了一个全局变量`name`，值为`xl`,它相当于`window`的一个属性,即`window.name="xl"`,又因为在调用`person`的时候`this`是指向`window`的，因此这里会输出`xl`.
 
-###作为方法来调用
+###作为对象的方法来调用
 
 在上面的代码中，普通函数的调用即是作为`window`对象的方法进行调用。显然`this`关键字指向了`window`对象.
 
@@ -298,6 +298,7 @@ a();  //输出  "XL"
 - <a href="http://www.cnblogs.com/justany/archive/2012/11/01/the_keyword_this_in_javascript.html" target="_blank">javascript中this详解</a>
 - <a href="http://www.ibm.com/developerworks/cn/web/1207_wangqf_jsthis/index.html" target="_blank">深入浅出javascript中的this</a>
 - <a href="http://www.cnblogs.com/hutaoer/p/3423782.html" target="_blank">setTimeout中this的指向问题</a>
+- <a href="http://www.ruanyifeng.com/blog/2010/04/using_this_keyword_in_javascript.html" target="_blank" title="">Javascript的this用法</a>
 
 
 
