--- a/_posts/2015-08-10-js-this.md
+++ b/_posts/2015-08-10-js-this.md
@@ -28,7 +28,7 @@ category: "javascript"
 
 ```js
 function person(){
-    this.name="xl";
+    this.name = "xl";
     console.log(this);
     console.log(this.name);
 }
@@ -40,7 +40,7 @@ person();  //输出  window  xl
 所以这个地方是`window`对象调用了`person`方法,那么`person`函数当中的`this`即指`window`,同时`window`还拥有了另外一个属性`name`,值为`xl`.
 
 ```js
-var name="xl";
+var name = "xl";
 function person(){
     console.log(this.name);
 }
@@ -56,17 +56,17 @@ person(); //输出 xl
 再来看下其他的形式
 
 ```js
-var name="XL";
-var person={
-    name:"xl",
-    showName:function(){
+var name = "XL";
+var person = {
+    name: "xl",
+    showName: function(){
         console.log(this.name);
     }
 }
 person.showName();  //输出  xl
 //这里是person对象调用showName方法，很显然this关键字是指向person对象的，所以会输出name
 
-var showNameA=person.showName;
+var showNameA = person.showName;
 showNameA();    //输出  XL
 //这里将person.showName方法赋给showNameA变量，此时showNameA变量相当于window对象的一个属性，因此showNameA()执行的时候相当于window.showNameA(),即window对象调用showNameA这个方法，所以this关键字指向window
 ```
@@ -74,15 +74,15 @@ showNameA();    //输出  XL
 再换种形式：
 
 ```js
-var personA={
-    name:"xl",
-    showName:function(){
+var personA = {
+    name: "xl",
+    showName: function(){
         console.log(this.name);
     }
 }
-var personB={
-    name:"XL",
-    sayName:personA.showName
+var personB = {
+    name: "XL",
+    sayName: personA.showName
 }
 
 personB.sayName();  //输出 XL
@@ -92,15 +92,15 @@ personB.sayName();  //输出 XL
 ###作为构造函数来调用
 
 ```js
-function  Person(name){
-    this.name=name;
+function Person(name){
+    this.name = name;
 }
-var personA=Person("xl");
-console.log(personA.name); // 输出  undefined
-console.log(window.name);//输出  xl
+var personA = Person("xl");
+console.log(personA.name); // 输出 undefined
+console.log(window.name);//输出 xl
 //上面代码没有进行new操作，相当于window对象调用Person("xl")方法，那么this指向window对象，并进行赋值操作window.name="xl".
 
-var personB=new Person("xl");
+var personB = new Person("xl");
 console.log(personB.name);// 输出 xl
 //这部分代码的解释见下
 ```
@@ -110,12 +110,12 @@ console.log(personB.name);// 输出 xl
 ```js
 //下面这段代码模拟了new操作符(实例化对象)的内部过程
 function person(name){
-    var o={};
-    o.__proto__=Person.prototype;  //原型继承
-    Person.call(o,name);
+    var o = {};
+    o.__proto__ = Person.prototype;  //原型继承
+    Person.call(o, name);
     return o;
 }
-var personB=person("xl");
+var personB = person("xl");
 
 console.log(personB.name);  // 输出  xl
 ```
@@ -295,10 +295,10 @@ a();  //输出  "XL"
 
 ####参考资料：
 
-- <a href="http://www.cnblogs.com/justany/archive/2012/11/01/the_keyword_this_in_javascript.html" target="_blank">javascript中this详解</a>
-- <a href="http://www.ibm.com/developerworks/cn/web/1207_wangqf_jsthis/index.html" target="_blank">深入浅出javascript中的this</a>
-- <a href="http://www.cnblogs.com/hutaoer/p/3423782.html" target="_blank">setTimeout中this的指向问题</a>
-- <a href="http://www.ruanyifeng.com/blog/2010/04/using_this_keyword_in_javascript.html" target="_blank" title="">Javascript的this用法</a>
+- <a rel="nofollow" href="http://www.cnblogs.com/justany/archive/2012/11/01/the_keyword_this_in_javascript.html" target="_blank">javascript中this详解</a>
+- <a rel="nofollow" href="http://www.ibm.com/developerworks/cn/web/1207_wangqf_jsthis/index.html" target="_blank">深入浅出javascript中的this</a>
+- <a rel="nofollow" href="http://www.cnblogs.com/hutaoer/p/3423782.html" target="_blank">setTimeout中this的指向问题</a>
+- <a rel="nofollow" href="http://www.ruanyifeng.com/blog/2010/04/using_this_keyword_in_javascript.html" target="_blank" title="">Javascript的this用法</a>
 
 
 
