--- a/_posts/2012-12-22-markdown.md
+++ b/_posts/2012-12-22-markdown.md
@@ -104,6 +104,6 @@ Markdown中有两种方式，实现链接，分别为内联方式和引用方式
 
 ####参考文献：
 
-- markdown语法说明：<a href="http://www.appinn.com/markdown/" target="_blank" title="">http://www.appinn.com/markdown/</a> <br>
-- Markdown官方网站：<a href="http://daringfireball.net/projects/markdown/ " target="_blank" title="">http://daringfireball.net/projects/markdown/</a> <br>
-- 推荐一款在线的Markdown编辑器：<a href="https://stackedit.io/ " target="_blank" title="">https://stackedit.io/ </a>
+- markdown语法说明：<a rel="nofollow" href="http://www.appinn.com/markdown/" target="_blank" title="">http://www.appinn.com/markdown/</a> <br>
+- Markdown官方网站：<a rel="nofollow" href="http://daringfireball.net/projects/markdown/ " target="_blank" title="">http://daringfireball.net/projects/markdown/</a> <br>
+- 推荐一款在线的Markdown编辑器：<a rel="nofollow" href="https://stackedit.io/ " target="_blank" title="">https://stackedit.io/ </a>
