--- a/_posts/2015-08-10-js-this.md
+++ b/_posts/2015-08-10-js-this.md
@@ -168,7 +168,7 @@ console.log(FruitB.n2);// 输出 peach
 
 `FruitB`调用`fruitA`的`change`方法，将`fruitA`中的`this`绑定到对象`FruitB`上。
 
-###Function.prototype.bind()方法
+###Function.prototype.bind()方法###
 
 ```js
 var name="XL";
