--- a/_posts/2015-08-17-js-Extras.md
+++ b/_posts/2015-08-17-js-Extras.md
@@ -54,7 +54,7 @@ console.log(arr.indexOf('b'));
 Array.prototype.indexOf = function(n){
     for (var i = 0; i < this.length; i++) {
         if(this[i] == n){
-            return i + '-indexOf';
+            return i;
         }
     };
     return -1;
