--- a/_posts/2015-08-17-js-Extras.md
+++ b/_posts/2015-08-17-js-Extras.md
@@ -76,11 +76,11 @@ for(var x in arr){
 //function(n){ for (var i = 0; i < this.length; i++) { if(this[i] == n){ return i + '-indexOf'; } }; return -1; }
 ```
 
-为什么会这样？得先知道一个原理：**预定义的属性不是可枚举的，而用户定义的属性总是可枚举的**
+为什么会这样？得先知道一个原理：**预定义的属性不是可枚举的，而用户定义的属性总是可枚举的**。
 
-在ie8以上的浏览器中，`indexOf`会被认为是预定义属性，使用`for in`时自然不会被枚举到。而ie8以下的js版本中并没有预定义`indexOf`，是我们自定义的方法，所以自然就被枚举到了。
+在ie8以上的浏览器中，`indexOf`会被认为是预定义属性，使用`for in`时自然不会被枚举到。而ie8以下的js版本中并没有预定义`indexOf`，是我们自定义的方法，所以就被枚举到了。
 
-而`for in`语句可用来遍历一个对象中的所有属性名，该枚举过程将会列出所有的属性，包括函数和你可能不关心的原型中的属性。
+关于`for in`：可用来遍历一个对象中的所有属性名，该枚举过程将会列出所有的属性，包括函数和你可能不关心的原型中的属性。
 
 所以上面的例子想得到正确的结果，需做如下修改：
 
@@ -136,10 +136,10 @@ console.log(Person.prototype.isPrototypeOf(s2))//true
 
 关于枚举，可参考：
 
-- <a rel="nofollow" href="" target="_blank" title="">js对象中什么是可枚举性(enumerable)？</a>
+- <a rel="nofollow" href="http://segmentfault.com/a/1190000002953364" target="_blank" title="">js对象中什么是可枚举性(enumerable)？</a>
 - <a rel="nofollow" href="http://www.365mini.com/page/javascript-propertyisenumerable.htm" target="_blank" title="">JavaScript propertyIsEnumerable() 函数详解</a>
-- <a href="http://www.cnblogs.com/dolphinX/p/3348467.html" target="_blank" title="">ECMAScript5 Object的新属性方法 </a>
-- <a href="http://blog.csdn.net/haojianfeng11/article/details/16331963" target="_blank" title="">JS 对象属性"可枚举"</a>
+- <a rel="nofollow" href="http://www.cnblogs.com/dolphinX/p/3348467.html" target="_blank" title="">ECMAScript5 Object的新属性方法 </a>
+- <a rel="nofollow" href="http://blog.csdn.net/haojianfeng11/article/details/16331963" target="_blank" title="">JS 对象属性"可枚举"</a>
 
 ###filter
 
@@ -200,7 +200,7 @@ console.log("========================");
 
 //Uses forEach to iterate
 arr.forEach(function(item,index){
-console.log(item);
+    console.log(item);
 });
 ```
 
