--- a/_posts/2015-08-17-js-Extras.md
+++ b/_posts/2015-08-17-js-Extras.md
@@ -193,7 +193,7 @@ var arr = [1,2,3,4,5,6,7,8];
 
 // Uses the usual "for" loop to iterate
 for(var i= 0, l = arr.length; i< l; i++){
-console.log(arr[i]);
+    console.log(arr[i]);
 }
 
 console.log("========================");
@@ -204,9 +204,9 @@ arr.forEach(function(item,index){
 });
 ```
 
-###map
+###map  <br>
 
-`map()`对数组的每个元素进行一定操作（映射）后，会返回一个新的数组，
+该`map()`对数组的每个元素进行一定操作（映射）后，会返回一个新的数组，
 
 以前这么玩：
 
