--- a/_posts/2015-08-17-js-Extras.md
+++ b/_posts/2015-08-17-js-Extras.md
@@ -6,7 +6,7 @@ keywords: javascript, 基础
 category: "javascript"
 ---
 
-ECMAScript5标准新增了几个数组操作的方法，让我们来看看都是什么：
+`ECMAScript5`标准新增了几个数组操作的方法，让我们来看看都是什么：
 
 - Array.prototype.indexOf
 - Array.prototype.lastIndexOf
