--- a/_posts/2015-08-17-js-Extras.md
+++ b/_posts/2015-08-17-js-Extras.md
@@ -202,7 +202,7 @@ arr.forEach(function(item,index){
 });
 ```
 
-###map  <br>
+###map
 
 该`map()`对数组的每个元素进行一定操作（映射）后，会返回一个新的数组，
 
@@ -241,7 +241,7 @@ console.log(getNewArr());
 
 `map()`是处理服务器返回数据时是一个非常实用的函数。
 
-###reduce
+<h3>reduce</h3>
 
 `reduce()`可以实现一个累加器的功能，将数组的每个值（从左到右）将其降低到一个值。
 
