--- a/_posts/2015-08-10-js-this.md
+++ b/_posts/2015-08-10-js-this.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: JS 中 this 关键字详解
+title: js 中 this 关键字详解
 description: JS 中 this 关键字详解
 keywords: javascript, 基础, this
 category: "javascript"
