--- a/_posts/2013-07-21-css-bug.md
+++ b/_posts/2013-07-21-css-bug.md
@@ -28,11 +28,11 @@ a{ _position: relative;} /*为容器内的链接定义相对定位属性position
   
 ####IE6/7使用绝对定位左右布局，左侧元素位置偏移
 
-描述：左侧定位元素在不加left:0的情况下，右侧元素自适应时，左侧元素在IE6下会发生偏移 <br>
+描述：左侧定位元素在不加`left:0`的情况下，右侧元素自适应时，左侧元素在IE6下会发生偏移 <br>
 解决办法： <br>
 
 
-1. 右侧元素使用padding-left；不要使用margin-left;
+1. 右侧元素使用`padding-left`；不要使用`margin-left`;
 2. 给左侧元素加left:0
 
 
@@ -43,12 +43,12 @@ a{ _position: relative;} /*为容器内的链接定义相对定位属性position
 
 ####IE6/7下用position:absolute后无法显示的原因
 
-“position:absolute”定位元素在IE6下无法显示，奇怪的是平时用“position:absolute”进行定位却没有这个问题。 <br>
-原来“IE6下采用绝对定位的元素如果紧接着浮动元素，那么就有可能显示不出来”。 <br>
+`position:absolute`定位元素在IE6下无法显示，奇怪的是平时用`position:absolute`进行定位却没有这个问题。 <br>
+原来<mark>IE6下采用绝对定位的元素如果紧接着浮动元素，那么就有可能显示不出来</mark>。 <br>
 问题找到了，解决办法也就找到，主要思路就两种： <br>
 
-1. 采用“position:aboslute”进行绝对定位的元素不要紧接着浮动元素。
-2. 在采用“position:aboslute”进行绝对定位的元素前增加一个清除浮动的元素。
+1. 采用`position:aboslute`进行绝对定位的元素不要紧接着浮动元素。
+2. 在采用`position:aboslute`进行绝对定位的元素前增加一个清除浮动的元素。
 
  
 ####IE6/7下textarea右侧竖滚动条痕迹消失的问题
@@ -59,8 +59,8 @@ textarea{overflow: auto;}
 
 ####IE6/7图片下方出现几像素的空白间隙？
 
-1. 使 li 浮动，并设置 img 为块级元素
-2. img{vertical-align: bottom/middle/top} 其中的任何一个都可以
+1. 使`li`浮动，并设置`img`为块级元素
+2. `img{vertical-align: bottom/middle/top;}` 其中的任何一个都可以
 
 
 ####IE6/7下当li中出现2个或以上的浮动时，li之间产生的空白间隙bug
@@ -74,7 +74,7 @@ li{vertical-align:top;} /*除了top值，还可以设置为text-top | middle | b
 ####IE6下line-height失效
 
 bug原因: <br>
-当在一个容器里文字和img、input、textarea、select、object等元素相连的时候，对这个容器设置的line-height数值会失效； 同时以上元素的行高可能×2： <br>
+当在一个容器里文字和`img`、`input`、`textarea`、`select`、`object`等元素相连的时候，对这个容器设置的`line-height`数值会失效； 同时以上元素的行高可能×2： <br>
 解决方法： <br>
 
 ```css
@@ -83,7 +83,7 @@ bug原因: <br>
  
 受影响的浏览器： IE 5.01 / IE 5.5 / IE 6;
 解决方法： <br>
-对和文字相连接的img、input、textarea、select、object等元素加以属性 <br>
+对和文字相连接的`img`、`input`、`textarea`、`select`、`object`等元素加以属性 <br>
 margin: (所属line-height-自身img,input,select,object高度)/2px 0;vertical-align:middle; <br>
 
 ```css
@@ -102,8 +102,8 @@ input{ padding: 0 .25em; width: auto; _width: 0; overflow:visible !ie;}
 
 摘自：<a href="http://www.planabc.net/2008/11/12/the_stretched_buttons_bug/ " target="_blank" title="">http://www.planabc.net/2008/11/12/the_stretched_buttons_bug/ </a> 
 
-这个对于FF和IE下对input按钮设置padding大小不一，可以很好的解决
-火狐：input::-moz-focus-inner {border: 0; padding: 0; margin-top: -1px; margin-bottom: -2px;}
+这个对于FF和IE下对input按钮设置padding大小不一，可以很好的解决 <br>
+火狐：`input::-moz-focus-inner {border: 0; padding: 0; margin-top: -1px; margin-bottom: -2px;}`
 
 
 ####a标签使用绝对定位后无法点击
@@ -140,7 +140,6 @@ input[type="file"] > input[type="button"]::-moz-focus-inner{
 overflow:hidden; width:100px; white-space:nowrap; text-overflow:ellipsis;
 ```
 
- 
 ####如何在点文字时也选中checkbox?
 
 方法1：
