--- a/_posts/2015-08-10-js-this.md
+++ b/_posts/2015-08-10-js-this.md
@@ -6,6 +6,8 @@ keywords: javascript, 基础, this
 category: "javascript"
 ---
 
+> 转自：<a href="http://segmentfault.com/a/1190000003046071" target="_blank">JS 中 this 关键字详解</a>
+
 本文主要解释在JS里面this关键字的指向问题(在浏览器环境下)。
 
 首先，必须搞清楚在JS里面，函数的几种调用方式:
@@ -166,7 +168,7 @@ console.log(FruitB.n2);// 输出 peach
 
 `FruitB`调用`fruitA`的`change`方法，将`fruitA`中的`this`绑定到对象`FruitB`上。
 
-###Function.prototype.bind()方法###
+<h3>Function.prototype.bind()方法</h3>
 
 ```js
 var name="XL";
@@ -288,10 +290,6 @@ person.showName();  //输出  "xl"
 var a=person.showName;
 a();  //输出  "XL"
 ```
-
-<br>
-
-> 转自：<a href="http://segmentfault.com/a/1190000003046071" target="_blank">JS 中 this 关键字详解</a>
 
 #####参考资料：
 
