--- a/_posts/2014-05-22-js-zhi.md
+++ b/_posts/2014-05-22-js-zhi.md
@@ -6,7 +6,7 @@ keywords: javascript, 基础
 category: "javascript"
 ---
 
-###定义
+##定义
 
 关于传值和传址，权威指南有这么一些话：
 
@@ -28,7 +28,7 @@ category: "javascript"
 
 ####表格：
 
-<table style="width:600px;" class="table">
+<table style="width:800px;" class="table">
     <tr>
         <td width="50"></td>
         <td align="center" width="200">传值</td>
@@ -60,7 +60,7 @@ Function instanceof Object  //true
 Array instanceof Object     //true
 ```
 
-###举例
+##举例
 
 看下面的demo：
 
@@ -98,6 +98,6 @@ console.log(o1.x);  //5
 console.log(o2.x);  //5
 ```
 
-###javascript类型总览图：
+##javascript类型总览图
 
 <img src="/static/images/js_type.png" alt="">
