--- a/_posts/2015-08-17-js-for-in.md
+++ b/_posts/2015-08-17-js-for-in.md
@@ -8,7 +8,7 @@ category: "javascript"
 
 遍历属性，我们首先要搞清楚`for in`，再来谈遍历：
 
-###关于for in
+##一、关于for in
 
 ####1.For...In 声明用于对数组或者对象的属性进行循环/迭代操作。
 
@@ -75,7 +75,7 @@ console.log(result1);  //true
 - <a rel="nofollow" href="http://www.cnblogs.com/snandy/archive/2011/03/03/1970132.html" target="_blank" title="">for in的缺陷</a>
 - <a rel="nofollow" href="http://www.cnblogs.com/snandy/archive/2011/03/29/1998714.html" target="_blank" title="">各浏览器中for in顺序的差异</a>
 
-###关于遍历
+##二、关于遍历
 
 在JavaScript中，遍历一个对象的属性往往没有在其他语言中遍历一个哈希(有些语言称为字典)的键那么简单，这主要有两个方面的原因： 
 
