--- a/_posts/2015-09-05-flex-test.md
+++ b/_posts/2015-09-05-flex-test.md
@@ -6,12 +6,60 @@ keywords: css
 category: "css"
 ---
 
-<ul class="flex">
-    <li>11111</li>
-    <li>22222</li>
-    <li>33333</li>
-    <li>44444</li>
-    <li>55555</li>
+
+<style>
+ul,li{ list-style: none;}
+.box{
+    display:-webkit-flex;
+    display:flex;
+    width:220px;margin:0;padding:10px;list-style:none;background-color:#eee;}
+.box li{width:100px;height:100px;border:1px solid #aaa;text-align:center;}
+#box{
+    -webkit-flex-wrap:nowrap;
+    flex-wrap:nowrap;
+}
+#box2{
+    -webkit-flex-wrap:wrap;
+    flex-wrap:wrap;
+}
+#box3{
+    -webkit-flex-wrap:wrap-reverse;
+    flex-wrap:wrap-reverse;
+}
+#box4{
+    -webkit-flex-wrap:wrap;
+    flex-wrap:wrap;
+}
+#box4 li{
+    flex: 1;
+    min-width: 40%;
+    width: auto;
+}
+</style>
+
+<h2>flex-wrap:nowrap</h2>
+<ul id="box" class="box">
+    <li>a</li>
+    <li>b</li>
+    <li>c</li>
+</ul>
+<h2>flex-wrap:wrap</h2>
+<ul id="box2" class="box">
+    <li>a</li>
+    <li>b</li>
+    <li>c</li>
+</ul>
+<h2>flex-wrap:wrap-reverse</h2>
+<ul id="box3" class="box">
+    <li>a</li>
+    <li>b</li>
+    <li>c</li>
+</ul>
+<h2>flex-wrap:wrap & flex</h2>
+<ul id="box4" class="box">
+    <li>a</li>
+    <li>b</li>
+    <li>c</li>
 </ul>
 
 
