--- a/_posts/2015-09-05-flex-test.md
+++ b/_posts/2015-09-05-flex-test.md
@@ -31,7 +31,7 @@ ul,li{ list-style: none;}
     flex-wrap:wrap;
 }
 #box4 li{
-    flex: 1;
+    -webkit-flex: 1;
     min-width: 40%;
     width: auto;
 }
