--- a/_posts/2015-09-05-flex-test.md
+++ b/_posts/2015-09-05-flex-test.md
@@ -13,7 +13,7 @@ ul,li{ list-style: none;}
     display:-webkit-flex;
     display:flex;
     width:220px;margin:0;padding:10px;list-style:none;background-color:#eee;}
-.box li{width:100px;height:100px;border:1px solid #aaa;text-align:center;}
+.box li{width:100px;height:100px;border:1px solid #f00;text-align:center;}
 #box{
     -webkit-flex-wrap:nowrap;
     flex-wrap:nowrap;
@@ -31,9 +31,14 @@ ul,li{ list-style: none;}
     flex-wrap:wrap;
 }
 #box4 li{
-    -webkit-flex: 1;
     min-width: 40%;
     width: auto;
+
+    -webkit-box-flex: 1;    
+    -moz-box-flex: 1;       
+    -webkit-flex: 1;        
+    -ms-flex: 1;            
+    flex: 1;            
 }
 </style>
 
