--- a/_posts/2012-12-22-markdown.md
+++ b/_posts/2012-12-22-markdown.md
@@ -102,7 +102,7 @@ Markdown中有两种方式，实现链接，分别为内联方式和引用方式
 
 <br><br>
 
-#####参考文献：
+__参考自：__
 
 - markdown语法说明：<a rel="nofollow" href="http://www.appinn.com/markdown/" target="_blank" title="">http://www.appinn.com/markdown/</a> <br>
 - Markdown官方网站：<a rel="nofollow" href="http://daringfireball.net/projects/markdown/ " target="_blank" title="">http://daringfireball.net/projects/markdown/</a> <br>
