--- a/_posts/2015-08-17-js-for-in.md
+++ b/_posts/2015-08-17-js-for-in.md
@@ -28,7 +28,7 @@ var obj = {
 }  
 for(var v in obj){  
     console.log(v); // w j b
-    console.log(obj.v); // wen jian bao
+    console.log(obj[v]); // wen jian bao
 }   
 ```
 
