--- a/_posts/2015-08-10-js-this.md
+++ b/_posts/2015-08-10-js-this.md
@@ -293,7 +293,7 @@ a();  //输出  "XL"
 
 <br>
 
-<h5>参考资料：</h5>
+__参考自：__
 
 - <a rel="nofollow" href="http://www.cnblogs.com/justany/archive/2012/11/01/the_keyword_this_in_javascript.html" target="_blank">javascript中this详解</a>
 - <a rel="nofollow" href="http://www.ibm.com/developerworks/cn/web/1207_wangqf_jsthis/index.html" target="_blank">深入浅出javascript中的this</a>
