--- a/_posts/2015-09-15-font-size.md
+++ b/_posts/2015-09-15-font-size.md
@@ -16,8 +16,8 @@ p{ font-size: 16px;}
 .p4{ font-family:Helvetica,STHeiTi,Arial,sans-serif;}
 </style>
 
-<p class="p1">汉字，¥10.123</p>
-<p class="p2">汉字，¥<em>10.123</em></p>
-<p class="p3">汉字，¥10.123</p>
-<p class="p4">汉字，¥10.123</p>
+<p class="p1">汉字，¥10.123,font-family:"Helvetica Neue",Helvetica,STHeiTi,Arial,sans-serif;</p>
+<p class="p2">汉字，¥<em>10.123</em>,font-family:"Helvetica Neue",Helvetica,STHeiTi,Arial,sans-serif;</p>
+<p class="p3">汉字，¥10.123,font-family:"微软雅黑",Helvetica,STHeiTi,Arial,sans-serif;</p>
+<p class="p4">汉字，¥10.123,font-family:Helvetica,STHeiTi,Arial,sans-serif;</p>
 
