--- a/_posts/2015-09-15-font-size.md
+++ b/_posts/2015-09-15-font-size.md
@@ -7,17 +7,9 @@ category: "css"
 ---
 
 
-<style>
-p{ font-size: 16px;}
-.p1{ font-family:"Helvetica Neue",Helvetica,STHeiTi,Arial,sans-serif;}
-.p2{ font-family:"Helvetica Neue",Helvetica,STHeiTi,Arial,sans-serif;}
-.p2 em{ font-style: normal; font-size: 1.5rem;}
-.p3{ font-family:"\5FAE\8F6F\96C5\9ED1",Helvetica,STHeiTi,Arial,sans-serif;}
-.p4{ font-family:Helvetica,STHeiTi,Arial,sans-serif;}
-</style>
-
-<p class="p1">汉字，¥10.123,font-family:"Helvetica Neue",Helvetica,STHeiTi,Arial,sans-serif;</p>
-<p class="p2">汉字，¥<em>10.123</em>,font-family:"Helvetica Neue",Helvetica,STHeiTi,Arial,sans-serif;</p>
-<p class="p3">汉字，¥10.123,font-family:"微软雅黑",Helvetica,STHeiTi,Arial,sans-serif;</p>
-<p class="p4">汉字，¥10.123,font-family:Helvetica,STHeiTi,Arial,sans-serif;</p>
-
+<p>汉字，¥10.123456789,font-family:默认</p>
+<p style="font-family:'Helvetica Neue'">汉字，¥10.123456789,font-family:"Helvetica Neue"</p>
+<p style="font-family:Helvetica">汉字，¥10.123456789,font-family:Helvetica</p>
+<p style="font-family:STHeiTi">汉字，¥10.123456789,font-family:STHeiTi</p>
+<p style="font-family:Arial">汉字，¥10.123456789,font-family:Arial</p>
+<p style="font-family:'微软雅黑'">汉字，¥10.123456789,font-family:'微软雅黑'</p>
