--- a/_posts/2015-09-21-js-oop.md
+++ b/_posts/2015-09-21-js-oop.md
@@ -6,29 +6,36 @@ keywords: javascript, 基础, 面向对象, oop, 类
 category: "javascript"
 ---
 
-面向对象的语言有一个标志，即拥有类的概念，抽象实例对象的公共属性与方法，基于类可以创建任意多个实例对象，一般具有封装、继承、多态的特性！但JS中对象与纯面向对象语言中的对象是不同的，ECMA标准定义JS中对象：无序属性的集合，其属性可以包含基本值、对象或者函数。可以简单理解为JS的对象是一组无序的值，其中的属性或方法都有一个名字，根据这个名字可以访问相映射的值（值可以是基本值/对象/方法）。
+面向对象的语言有一个标志，那就是都有类的概念。通过类可以创建任意多个具有相同属性和方法的对象。ECMAScript中没有类的概念，因此它的对象与纯面向对象语言中的对象是不同的。
+
+ECMA-262把对象定义为：“无序属性的集合，其属性可以包含基本值、对象或者函数”。可以简单理解为JS的对象是一组无序的值，其中的属性或方法都有一个名字，根据这个名字可以访问相映射的值（值可以是基本值/对象/方法）。
 
 ###一、理解对象
 
-####第一种：基于Object对象
+####基于Object对象
+
+创建自定义对象最简单的方法就是创建一个Object的实例，然后再为它添加属性和方法：
 
 ```js
 var person = new Object();
-person.name = 'My Name';
-person.age = 18;
-person.getName = function(){
-    return this.name;
+person.name = 'Nicholas';
+person.age = 29;
+person.job = 'Software Engineer';
+
+person.sayName = function(){
+	console.log(this.name);
 }
 ```
 
-####第二种：字面量方式
+####字面量方式
 
 ```js
 var person = {
-    name : 'My name',
-    age : 18,
-    getName : function(){
-        return this.name;
+    name : 'Nicholas',
+    age : 29,
+	job : 'Software Engineer',
+    sayName : function(){
+        console.log(this.name);
     }
 }
 ```
@@ -42,21 +49,13 @@ delete person.age;
 console.log(person.age);          //undefined(删除属性后值为undefined);
 ```
 
-###二、对象属性类型
-
-ECMA-262第5版定义了JS对象属性中特征（用于JS引擎，外部无法直接访问）。ECMAScript中有两种属性：数据属性和访问器属性
-
-####1、数据属性
-
-
-####2、访问器属性
-
-
 ###三、创建对象
 
-使用Object构造函数或对象字面量都可以创建对象，但缺点是创建多个对象时，会产生大量的重复代码，因此下面介绍可解决这个问题的创建对象的方法：
+虽然Object构造函数或对象字面量都可以创建单个对象，但这些方式有个明星的缺点：使用同一个接口创建很多对象，会产生大量重复代码。为解决这个问题，人们开始使用工厂模式的一种变体：
 
 ####1、工厂模式
+
+工厂模式是软件工程领域一种广为人知的设计模式，这种模式抽象了创建具体对象的过程。因为ECMAScript中无法创建类，开发人员就发明了一种函数，用函数来封装以特定的接口创建对象的细节，如下：
 
 ```js
 function createPerson(name, age, job) {
@@ -64,113 +63,190 @@ function createPerson(name, age, job) {
     o.name = name;
     o.age = age;
     o.job = job;
-    o.getName = function () {
+    o. = function () {
         return this.name;
     }
-    return o;//使用return返回生成的对象实例
+    return o;//使用return返回生成的对象
 }
-var person = createPerson('Jack', 19, 'SoftWare Engineer');
+var person1 = createPerson('Nicholas', 29, 'SoftWare Engineer');
+var person2 = createPerson('Greg', 27, 'Doctor');
 ```
 
 创建对象交给一个工厂方法来实现，可以传递参数，但主要缺点是无法识别对象类型，因为创建对象都是使用Object的原生构造函数来完成的。
 
 ####2、构造函数模式
 
+ECMAScript中的构造函数可用来创建特定类型的对象。像Object和Array这样的原生构造函数，在运行时会自动出现在执行环境中。此外，也可以创建自定义的构造函数，从而定义自定义对象类型的属性和方法，如下：
+
 ```js
 function Person(name,age,job){
     this.name = name;
     this.age = age;
     this.job = job;
-    this.getName = function () {
-        return this.name;
+    this.sayName = function () {
+        console.log(this.name);
     }
 }
 
-var person1 = new Person('Jack', 19, 'SoftWare Engineer');
-var person2 = new Person('Liye', 23, 'Mechanical Engineer');
+var person1 = new Person('Nicholas', 29, 'SoftWare Engineer');
+var person2 = new Person('Greg', 27, 'Doctor');
 ```
 
 使用自定义的构造函数（与普通函数一样，只是用它来创建对象），定义对象类型（如：Person）的属性和方法。它与工厂方法区别在于：
 
 - 没有显式地创建对象；
-- 直接将属性和方法赋值给this对象；
+- 直接将属性和方法赋值给了this对象；
 - 没有return语句。
 
- 此外，要创建Person的实例，必须使用new关键字，以Person函数为构造函数，传递参数完成对象创建；实际创建经过以下4个过程：
+此外，要创建Person的实例，必须使用new关键字，以Person函数为构造函数，传递参数完成对象创建；实际创建经过以下4个过程：
 
 1. 创建一个对象；
 2. 将函数的作用域赋给新对象（因此this指向这个新对象，如：person1）；
 3. 执行构造函数的代码；
 4. 返回该对象。
 
-上述由Person构造函数生成的两个对象person1与person2都是Person的实例，因此可以使用instanceof判断，并且因为所有对象都继承Object，因此person1 instanceof Object也返回真：
+在前面例子的最后，person1和person2分别保存着Person的一个不同的实例。这两个对象都有一个`constructor`（构造函数）属性，该属性指向创建这个实例的函数对象，即Person，如下：
 
 ```js
-alert(person1 instanceof Person);//true;
-alert(person2 instanceof Person);//true;
-alert(person1 instanceof Object);//true;
-alert(person1.constructor === person2.constructor);//ture;
+console.log(person1.constructor === Person);	 //true
+console.log(person2.constructor === Person);	 //true
 ```
 
-虽然构造函数方式比较不错，但也存在缺点，那就是在创建对象时，特别针对对象的属性指向函数时，会重复的创建函数实例，以上述代码为基础，可以改写为：
+对象的constructor属性最初是用来标书对象类型的。针对对象类型的检测，还是instanceof操作符更可靠：
+
+```js
+console.log(person1 instanceof Person);	//true;
+console.log(person1 instanceof Object);	//true;
+
+console.log(person2 instanceof Person);	//true;
+console.log(person2 instanceof Object);	//true;
+```
+
+创建自定义的构造函数意味着将来可以将它的实例标识为一种特定的类型——这正是构造函数模式胜过工厂模式的地方。
+
+#####1.将构造函数当做函数
+
+构造函数与其他函数的唯一区别，就在于调用它们的方式不同。构造函数本身也是函数，不存在特殊定义特殊语法。任何函数，只要通过new操作符调用，那它就可以作为构造函数，反之，不通过new，那就跟普通函数没什么两样。如下：
+
+```js
+//当作构造函数使用
+var person = new Person('Nicholas', 29, 'SoftWare Engineer');
+person.sayName();	//"Nicholas"
+
+//当作普通函数调用，并且作用域在window上
+Person('Greg',27,'Doctor');
+window.sayName();	//"Greg"
+
+//在另一个对象的作用域中调用
+var o = {};
+Person.call(o, 'chan', 25, '切图仔');
+o.sayName();	//"chan"
+```
+
+#####2.构造函数的问题
+
+构造函数模式虽然好用，但并非没有缺点。使用构造函数的主要问题，就是每个方法都要在每个实例上重新创建一遍。前面例子中，person1和person2都有一个名为sayName()的方法，但两个方法不是同一个Function的实例。不要忘了———ECMAScript中的函数是对象，因此每定义一个函数，也就是实例化了一个对象。所以上面代码可以主要定义：
 
 ```js
 function Person(name,age,job){
     this.name = name;
     this.age = age;
     this.job = job;
-    this.getName = new Function () {//改写后效果与原代码相同，不过是为了方便理解
-        return this.name;
-    }
+    this.sayName = new Function('console.log(this.name)');	//与声明函数在逻辑上是等价的
 }
 ```
 
-上述代码，创建多个实例时，会重复调用new Function();创建多个函数实例，这些函数实例还不是一个作用域中，当然这一般不会有错，但这会造成内存浪费。当然，可以在函数中定义一个getName = getName的引用，而getName函数在Person外定义，这样可以解决重复创建函数实例问题，但在效果上并没有起到封装的效果，如下所示：
+上述代码，创建多个实例时，会重复调用`new Function()`;创建多个函数实例，这些函数实例还不是一个作用域中，当然这一般不会有错，但这会造成内存浪费。当然，可以在函数中定义一个sayName = sayName的引用，而sayName函数在Person外定义，这样可以解决重复创建函数实例问题，但在效果上并没有起到封装的效果，如下所示：
 
 ```js
 function Person(name,age,job){
     this.name = name;
     this.age = age;
     this.job = job;
-    this.getName = getName;
+    this.sayName = sayName;		//指向外部全局函数的指针
 }
-function getName() {//到处是代码，看着乱！！
-    return this.name;
+function sayName() {
+    console.log(this.name);
 }
 ```
 
 ####3、原型模式
 
-JS每个函数都有一个prototype(原型)属性，这个属性是一个指针，指向一个对象，它是所有通过new操作符使用函数创建的实例的原型对象。原型对象最大特点是，所有对象实例共享它所包含的属性和方法，也就是说，所有在原型对象中创建的属性或方法都直接被所有对象实例共享。
+JS中每个函数都有一个`prototype`(原型)属性，这个属性是一个指针，指向一个对象，而这个对象的用途是包含可以由特定类型的所有实例共享的属性和方法。按照字面意思理解，那么prototype就是通过调用构造函数而创建的那个对象实例的原型对象，即：它是所有通过new操作符使用函数创建的实例的原型对象。原型对象最大特点是，所有对象实例共享它所包含的属性和方法，换句话说，不必在构造函数中定义对象实例的信息，可以将这些信息直接添加到原型对象中，如下：
 
 ```js
 function Person(){
+	// 空的构造函数
 }
-Person.prototype.name = 'Jack';//使用原型来添加属性
+Person.prototype.name = 'Nicholas';//使用原型来添加属性
 Person.prototype.age = 29;
-Person.prototype.getName = function(){
-    return this.name;
+Person.prototype.sayName = function(){
+    console.log(this.name);
 }
 var person1 = new Person();
-alert(person1.getName());//Jack
+console.log(person1.sayName());		//"Nicholas"
 var person2 = new Person();
-alert(person1.getName === person2.getName);//true;共享一个原型对象的方法
+console.log(person1.sayName === person2.sayName);		//true;共享一个原型对象的方法
 ```
 
-原型是指向原型对象的，这个原型对象与构造函数没有太大关系，唯一的关系是函数的prototype是指向这个原型对象！而基于构造函数创建的对象实例也包含一个内部指针为：[[prototype]]指向原型对象。
+#####1.理解原型对象
+
+无论什么时候，只要创建了一个新函数，就会根据一组特定的规则为该函数创建一个prototype属性，这个属性指向函数的原型对象。在默认情况下，所有原型对象都会自动获得一个constructor（构造函数）属性，这个属性包含一个指向prototype属性所在函数的指针。拿前面的例子来说，Person函数有一个prototype属性，Person.prototype有一个constructor属性，这个属性指向指向Person。如下：
+
+```js
+Person.prototype //Person {name: "Nicholas", age: 29}
+Person.prototype.constructor //Person()
+Person.prototype.constructor == Person //true
+```
+
+创建自定义构造函数后，其原型对象默认只会取得constructor属性，其他属性都是从Object继承而来的。当调用构造函数创建一个新实例后，该实例的内部将包含一个指针（内部属性），指向构造函数的原型对象。ECMA-262第5版中管这个指针叫[[Prototype]]。虽然在脚本中没有标准的方式访问[[Prototype]]，但FF、Safari、Chrome都暴露了一个`__proto__`；不过，要明确真正重要的一点是，这个连接存在于实例与构造函数的原型对象之间，而不是存在于实例与构造函数之间。
 
 实例属性或方法的访问过程是一次搜索过程：
 
 - 首先从对象实例本身开始，如果找到属性就直接返回该属性值；
-- 如果实例本身不存在要查找属性，就继续搜索指针指向的原型对象，在其中查找给定名字的属性，如果有就返回。
+- 如果实例本身不存在要查找的属性，就继续搜索指针指向的原型对象，在其中查找给定名字的属性，如果有就返回。
 
- 基于以上分析，原型模式创建的对象实例，其属性是共享原型对象的；但也可以自己实例中再进行定义，在查找时，就不从原型对象获取，而是根据搜索原则，得到本实例的返回；简单来说，就是实例中属性会屏蔽原型对象中的属性；
+基于以上分析，原型模式创建的对象实例，其属性是共享原型对象的；但也可以自己实例中再进行定义，在查找时，就不从原型对象获取，而是根据搜索原则，得到本实例的返回；简单来说，就是实例中属性会屏蔽原型对象中的属性；
 
-#####原型与in操作符
+#####2.原型与in操作符
 
 一句话：无论原型中属性，还是对象实例的属性，都可以使用in操作符访问到；要想判断是否是实例本身的属性可以使用object.hasOwnProperty(‘attr’)来判断；
 
-#####原生对象中原型
+```js
+function Person(){
+	//空的
+}
+Person.prototype.name = 'chan';
+Person.prototype.age = 29;
+Person.prototype.job = '切图仔';
+Person.prototype.sayName = function(){
+	console.log(this.name);
+}
+
+var person1 = new Person();
+var person2 = new Person();
+
+console.log(person1.hasOwnProperty('name'));	//false
+console.log('name' in person1);		//true
+
+person1.name = 'long';
+console.log(person1.name);		//"long"	————来自实例
+console.log(person1.hasOwnProperty('name'));	//true
+console.log('name' in person1);		//true
+
+console.log(person2.name);		//"chan"	————来自原型
+console.log(person2.hasOwnProperty('name'));	//false
+console.log('name' in person2);		//true
+
+delete person1.name;
+console.log(person1.name);		//"chan"	————实例属性已被删除，来自原型
+console.log(person1.hasOwnProperty('name'));	//false
+console.log('name' in person1);		//true
+```
+
+#####3.原生对象中原型
+
+原型模式的重要性不仅体现在创建自定义类型，就连所有原生的引用类型，都是采用这种模式创建的。所有原生引用类型（Object、Array、String、等等）都是其构造函数的原型上定义了方法。
 
 原生对象中原型与普通对象的原型一样，可以添加/修改属性或方法，如以下代码为所有字符串对象添加去左右空白原型方法：
 
@@ -179,8 +255,10 @@ String.prototype.trim = function(){
     return this.replace(/^\s+/,'').replace(/\s+$/,'');
 }
 var str = '   word space   ';
-alert('!'+str.trim()+'!');//!word space!
+console.log('!'+str.trim()+'!');//!word space!
 ```
+
+#####4.原型对象的问题
 
 原型模式的缺点，它省略了为构造函数传递初始化参数，这在一定程序带来不便；另外，最主要是当对象的属性是引用类型时，它的值是不变的，总是引用同一个外部对象，所有实例对该对象的操作都会其它实例：
 
@@ -192,7 +270,7 @@ Person.prototype.lessons = ['Math','Physics'];
 var person1 = new Person();
 person1.lessons.push('Biology');
 var person2 = new Person();
-alert(person2.lessons);//Math,Physics,Biology，person1修改影响了person2
+console.log(person2.lessons);//Math,Physics,Biology，person1修改影响了person2
 ```
 
 ####4、组合构造函数及原型模式
@@ -204,20 +282,25 @@ function Person(name, age, job) {
     this.name = name;
     this.age = age;
     this.job = job;
-    this.lessons = ['Math', 'Physics'];
+    this.friends = ['Shelby', 'Court'];
 }
 Person.prototype = {
-    constructor: Person,//原型字面量方式会将对象的constructor变为Object，此外强制指回Person
-    getName: function () {
-        return this.name;
+    constructor: Person,	//原型字面量方式会将对象的constructor变为Object，此外强制指回Person
+    sayName: function(){
+        console.log(this.name);
     }
 }
+
 var person1 = new Person('Jack', 19, 'SoftWare Engneer');
-person1.lessons.push('Biology');
 var person2 = new Person('Lily', 39, 'Mechanical Engneer');
-alert(person1.lessons);//Math,Physics,Biology
-alert(person2.lessons);//Math,Physics
-alert(person1.getName === person2.getName);//true,//共享原型中定义方法
+
+person1.friends.push('Van');
+
+console.log(person1.friends);	//["Shelby", "Court", "Van"]
+console.log(person2.friends);	//["Shelby", "Court"]
+
+console.log(person1.friends === person2.friends);	//false
+console.log(person1.sayName === person2.sayName);	//true 共享原型中定义方法
 ```
  
 
@@ -236,10 +319,10 @@ function Person(name, age, job) {
     this.lessons = ['Math', 'Physics'];
 
 }
-if (typeof this.getName != 'function') {//通过判断实例封装
+if (typeof this.sayName != 'function') {//通过判断实例封装
 　　Person.prototype = {
 　　　　constructor: Person,//原型字面量方式会将对象的constructor变为Object，此外强制指回Person
-　　　　getName: function () {
+　　　　sayName: function () {
 　　　　　　return this.name;
 　　　　}
 　　}
@@ -247,9 +330,9 @@ if (typeof this.getName != 'function') {//通过判断实例封装
 var person1 = new Person('Jack', 19, 'SoftWare Engneer');
 person1.lessons.push('Biology');
 var person2 = new Person('Lily', 39, 'Mechanical Engneer');
-alert(person1.lessons);//Math,Physics,Biology
-alert(person2.lessons);//Math,Physics
-alert(person1.getName === person2.getName);//true,//共享原型中定义方法
+console.log(person1.lessons);//Math,Physics,Biology
+console.log(person2.lessons);//Math,Physics
+console.log(person1.sayName === person2.sayName);//true,//共享原型中定义方法
 ```
 
 
