--- a/_posts/2015-08-10-js-this.md
+++ b/_posts/2015-08-10-js-this.md
@@ -6,8 +6,6 @@ keywords: javascript, 基础, this
 category: "javascript"
 ---
 
-> 转自：<a href="http://segmentfault.com/a/1190000003046071" target="_blank">JS 中 this 关键字详解</a>
-
 本文主要解释在JS里面this关键字的指向问题(在浏览器环境下)。
 
 首先，必须搞清楚在JS里面，函数的几种调用方式:
@@ -32,7 +30,6 @@ function person(){
     console.log(this);
     console.log(this.name);
 }
-
 person();  //输出  window  xl   
 ```
 
@@ -119,24 +116,25 @@ var personB = person("xl");
 
 console.log(personB.name);  // 输出  xl
 ```
+**步骤如下：**
 
-- 在`person`里面首先创建一个空对象`o`，将`o`的`proto`指向`Person.prototype`完成对原型的属性和方法的继承
-- `Person.call(o,name)`这里即函数`Person`作为`apply/call`调用(具体内容下方)，将`Person`对象里的`this`改为`o`，即完成了`o.name=name`操作
-- 返回对象`o`。
+1. 在`person`里面首先创建一个空对象`o`；
+2. 将`o`的`proto`指向`Person.prototype`完成对原型的属性和方法的继承；
+3. `Person.call(o,name)`这里即函数`Person`作为`apply/call`调用(具体内容下方)，将`Person`对象里的`this`改为`o`，即完成了`o.name = name`操作；
+4. 返回对象`o`。
 
 因此`person("xl")`返回了一个继承了`Person.prototype`对象上的属性和方法，以及拥有`name`属性为`"xl"`的对象，并将它赋给变量`personB`，所以`console.log(personB.name)`会输出`"xl"`
 
 ###call/apply方法的调用
 
-在JS里函数也是对象，因此函数也有方法。从`Function.prototype`上继承到`Function.prototype.call/Function.prototype.apply`方法`call/apply`方法最大的作用就是能改变`this`关键字的指向.
-
-`Obj.method.apply(AnotherObj,arguments);`
+在JS里，函数也是对象，因此函数也有方法。从`Function.prototype`上继承到`Function.prototype.call/Function.prototype.apply`方法`call/apply`方法最大的作用就是能改变`this`关键字的指向.
+`Obj.method.apply(AnotherObj, arguments);`
 
 ```js
-var name="XL";
-var Person={
-    name:"xl",
-    showName:function(){
+var name = "XL";
+var Person = {
+    name: "xl",
+    showName: function(){
         console.log(this.name);
     }
 }
@@ -147,18 +145,18 @@ Person.showName.call(); //输出 "XL"
 
 ```js
 funtion FruitA(n1,n2){
-    this.n1=n1;
-    this.n2=n2;
-    this.change=function(x,y){
-        this.n1=x;
-        this.n2=y;
+    this.n1 = n1;
+    this.n2 = n2;
+    this.change = function(x, y){
+        this.n1 = x;
+        this.n2 = y;
     }
 }
 
-var fruitA=new FruitA("cheery","banana");
-var FruitB={
-    n1:"apple",
-    n2:"orange"
+var fruitA = new FruitA("cheery","banana");
+var FruitB = {
+    n1: "apple",
+    n2: "orange"
 };
 fruitA.change.call(FruitB,"pear","peach");
 
@@ -171,32 +169,32 @@ console.log(FruitB.n2);// 输出 peach
 <h3>Function.prototype.bind()方法</h3>
 
 ```js
-var name="XL";
+var name = "XL";
 function Person(name){
-    this.name=name;
-    this.sayName=function(){
+    this.name = name;
+    this.sayName = function(){
         setTimeout(function(){
             console.log("my name is "+this.name);
         },50)
     }
 }
-var person=new Person("xl");
+var person = new Person("xl");
 person.sayName()  //输出  “my name is XL”;
 ```
 
 那么如何才能输出`"my name is xl"`呢？
 
 ```js
-var name="XL";
+var name = "XL";
 function Person(name){
-    this.name=name;
-    this.sayName=function(){
+    this.name = name;
+    this.sayName = function(){
         setTimeout(function(){
             console.log("my name is "+this.name);
         }.bind(this),50)  //注意这个地方使用的bind()方法，绑定setTimeout里面的匿名函数的this一直指向Person对象
     }
 }
-var person=new Person("xl");
+var person = new Person("xl");
 person.sayName(); //输出 “my name is xl”;
 ```
 
@@ -206,15 +204,15 @@ person.sayName(); //输出 “my name is xl”;
 `setTimeout/setInterval/匿名函数执行`的时候，`this`默认指向`window对象`，除非手动改变this的指向。在《javascript高级程序设计》当中，写到：“超时调用的代码(`setTimeout`)都是在全局作用域中执行的，因此函数中的this的值，在非严格模式下是指向window对象，在严格模式下是指向undefined”。本文都是在非严格模式下的情况。
 
 ```js
-var name="XL";
+var name = "XL";
 function Person(){
-    this.name="xl";
-    this.showName=function(){
+    this.name = "xl";
+    this.showName = function(){
         console.log(this.name);
     }
     setTimeout(this.showName,50);
 }
-var person=new Person(); //输出 "XL"
+var person = new Person(); //输出 "XL"
 
 //在setTimeout(this.showName,50)语句中，会延时执行this.showName方法
 //this.showName方法即构造函数Person()里面定义的方法。50ms后，执行this.showName方法，this.showName里面的this此时便指向了window对象。则会输出"XL";
@@ -223,29 +221,29 @@ var person=new Person(); //输出 "XL"
 修改上面的代码：
 
 ```js
-var name="XL";
+var name = "XL";
 function Person(){
-    this.name="xl";
-    var that=this;
-    this.showName=function(){
+    this.name = "xl";
+    var that = this;
+    this.showName = function(){
         console.log(that.name);
     }
     setTimeout(this.showName,50)
 }
-var person=new Person(); //输出 "xl"
+var person = new Person(); //输出 "xl"
 //这里在Person函数当中将this赋值给that，即让that保存Person对象，因此在setTimeout(this.showName,50)执行过程当中，console.log(that.name)即会输出Person对象的属性"xl"
 ```
 
 匿名函数：
 
 ```js
-var name="XL";
-var person={
-    name:"xl",
-    showName:function(){
+var name = "XL";
+var person = {
+    name: "xl",
+    showName: function(){
         console.log(this.name);
     }
-    sayName:function(){
+    sayName: function(){
         (function(callback){
             callback();
         })(this.showName)
@@ -255,14 +253,14 @@ person.sayName();  //输出 XL
 ```
 
 ```js
-var name="XL";
-var person={
-    name:"xl",
-    showName:function(){
+var name = "XL";
+var person = {
+    name: "xl",
+    showName: function(){
         console.log(this.name);
     }
-    sayName:function(){
-        var that=this;
+    sayName: function(){
+        var that = this;
         (function(callback){
             callback();
         })(that.showName)
@@ -277,10 +275,10 @@ person.sayName() ;  //输出  "xl"
 该函数执行的时候，this绑定到当前作用域的对象上
 
 ```js
-var name="XL";
-var person={
-    name:"xl",
-    showName:function(){
+var name = "XL";
+var person = {
+    name: "xl",
+    showName: function(){
         eval("console.log(this.name)");
     }
 }
@@ -301,4 +299,4 @@ __参考自：__
 - <a rel="nofollow" href="http://www.ruanyifeng.com/blog/2010/04/using_this_keyword_in_javascript.html" target="_blank" title="">Javascript的this用法</a>
 
 
-
+> 转自：<a href="http://segmentfault.com/a/1190000003046071" target="_blank">JS 中 this 关键字详解</a>
