--- a/_posts/2015-09-21-js-oop.md
+++ b/_posts/2015-09-21-js-oop.md
@@ -8,11 +8,14 @@ category: "javascript"
 
 面向对象的语言有一个标志，那就是都有类的概念。通过类可以创建任意多个具有相同属性和方法的对象。ECMAScript中没有类的概念，因此它的对象与纯面向对象语言中的对象是不同的。
 
+<!-- more -->
+
 ECMA-262把对象定义为：“无序属性的集合，其属性可以包含基本值、对象或者函数”。可以简单理解为JS的对象是一组无序的值，其中的属性或方法都有一个名字，根据这个名字可以访问相映射的值（值可以是基本值/对象/方法）。
+
 
 ###一、理解对象
 
-####基于Object对象
+####1、基于Object对象
 
 创建自定义对象最简单的方法就是创建一个Object的实例，然后再为它添加属性和方法：
 
@@ -24,10 +27,10 @@ person.job = 'Software Engineer';
 
 person.sayName = function(){
 	console.log(this.name);
-}
+};
 ```
 
-####字面量方式
+####2、字面量方式
 
 ```js
 var person = {
@@ -37,21 +40,21 @@ var person = {
     sayName : function(){
         console.log(this.name);
     }
-}
+};
 ```
 
 JS的对象可以使用`.`操作符动态的扩展其属性，可以使用`delete`操作符或将属性值设置为`undefined`来删除属性。如下：
 
 ```js
-person.newAtt='new Attr';   //添加属性
-console.log(person.newAtt);       //new Attr
+person.newAtt='new Attr';   	//添加属性
+console.log(person.newAtt);     //new Attr
 delete person.age;
-console.log(person.age);          //undefined(删除属性后值为undefined);
+console.log(person.age);        //undefined(删除属性后值为undefined);
 ```
 
 ###三、创建对象
 
-虽然Object构造函数或对象字面量都可以创建单个对象，但这些方式有个明星的缺点：使用同一个接口创建很多对象，会产生大量重复代码。为解决这个问题，人们开始使用工厂模式的一种变体：
+虽然Object构造函数或对象字面量都可以创建单个对象，但这些方式有个明显的缺点：使用同一个接口创建很多对象，会产生大量重复代码。为解决这个问题，人们开始使用工厂模式的一种变体：
 
 ####1、工厂模式
 
@@ -63,10 +66,10 @@ function createPerson(name, age, job) {
     o.name = name;
     o.age = age;
     o.job = job;
-    o. = function () {
+    o.sayName = function() {
         return this.name;
     }
-    return o;//使用return返回生成的对象
+    return o;	//使用return返回生成的对象
 }
 var person1 = createPerson('Nicholas', 29, 'SoftWare Engineer');
 var person2 = createPerson('Greg', 27, 'Doctor');
@@ -83,7 +86,7 @@ function Person(name,age,job){
     this.name = name;
     this.age = age;
     this.job = job;
-    this.sayName = function () {
+    this.sayName = function() {
         console.log(this.name);
     }
 }
@@ -182,7 +185,7 @@ Person.prototype.name = 'Nicholas';//使用原型来添加属性
 Person.prototype.age = 29;
 Person.prototype.sayName = function(){
     console.log(this.name);
-}
+};
 var person1 = new Person();
 console.log(person1.sayName());		//"Nicholas"
 var person2 = new Person();
@@ -221,7 +224,7 @@ Person.prototype.age = 29;
 Person.prototype.job = '切图仔';
 Person.prototype.sayName = function(){
 	console.log(this.name);
-}
+};
 
 var person1 = new Person();
 var person2 = new Person();
@@ -253,9 +256,9 @@ console.log('name' in person1);		//true
 ```js
 String.prototype.trim = function(){
     return this.replace(/^\s+/,'').replace(/\s+$/,'');
-}
+};
 var str = '   word space   ';
-console.log('!'+str.trim()+'!');//!word space!
+console.log('!'+str.trim()+'!');	//!word space!
 ```
 
 #####4.原型对象的问题
@@ -264,6 +267,7 @@ console.log('!'+str.trim()+'!');//!word space!
 
 ```js
 function Person() {
+	//空函数
 }
 Person.prototype.name = 'Jack';
 Person.prototype.lessons = ['Math','Physics'];
@@ -289,7 +293,7 @@ Person.prototype = {
     sayName: function(){
         console.log(this.name);
     }
-}
+};
 
 var person1 = new Person('Jack', 19, 'SoftWare Engneer');
 var person2 = new Person('Lily', 39, 'Mechanical Engneer');
@@ -302,7 +306,7 @@ console.log(person2.friends);	//["Shelby", "Court"]
 console.log(person1.friends === person2.friends);	//false
 console.log(person1.sayName === person2.sayName);	//true 共享原型中定义方法
 ```
- 
+
 
 > 在所接触的JS库中，jQuery类型的封装就是使用组合模式来实例的！！！
 
@@ -322,7 +326,7 @@ function Person(name, age, job) {
 if (typeof this.sayName != 'function') {//通过判断实例封装
 　　Person.prototype = {
 　　　　constructor: Person,//原型字面量方式会将对象的constructor变为Object，此外强制指回Person
-　　　　sayName: function () {
+　　　　sayName: function() {
 　　　　　　return this.name;
 　　　　}
 　　}
