--- a/_posts/2015-09-25-web-note.md
+++ b/_posts/2015-09-25-web-note.md
@@ -65,6 +65,7 @@ $(document).ready(function() {
 
 ###学习类
 
+- [Frontend Knowledge Structure](http://html5ify.com/fks/)
 - [免费的编程中文书籍索引](http://siberiawolf.com/free_programming/index.html)
 - [正则表达式30分钟入门教程](http://deerchao.net/tutorials/regex/regex.htm)
 - [课程库 - 极客标签](http://www.gbtags.com/gb/gblibrary.htm)
