--- a/_posts/2015-09-25-web-note.md
+++ b/_posts/2015-09-25-web-note.md
@@ -56,6 +56,8 @@ $(document).ready(function() {
 
 - [HOW TO LOSE WEIGHT in the browser](http://browserdiet.com/zh/)
 - [移动H5前端性能优化指南](http://isux.tencent.com/h5-performance.html)
+- [cssReset](https://perishablepress.com/cssresetr/)
+- [normalize.css](http://necolas.github.io/normalize.css/)
 
 ####规范
 
@@ -105,7 +107,7 @@ $(document).ready(function() {
 - [在线工具集合](http://tool.oschina.net/)
 - [前端开发仓库](http://code.ciaoca.com/)
 - [前端开发工具大全-武方博收集整理](http://www.wufangbo.com/web-development-tools-list/)
-- [前端开发神奇-w3cfuns](http://www.w3cfuns.com/tools.php)
+- [前端开发神器-w3cfuns](http://www.w3cfuns.com/tools.php)
 
 ###资源类
 
