--- a/_posts/2015-08-10-js-this.md
+++ b/_posts/2015-08-10-js-this.md
@@ -291,8 +291,9 @@ a();  //输出  "XL"
 
 <br>
 
-__参考自：__
+__参考自：__  
 
+- <a rel="nofollow" href="http://www.cnblogs.com/Wayou/p/all-this.html" target="_blank" title="">详解this</a>
 - <a rel="nofollow" href="http://www.cnblogs.com/justany/archive/2012/11/01/the_keyword_this_in_javascript.html" target="_blank">javascript中this详解</a>
 - <a rel="nofollow" href="http://www.ibm.com/developerworks/cn/web/1207_wangqf_jsthis/index.html" target="_blank">深入浅出javascript中的this</a>
 - <a rel="nofollow" href="http://www.cnblogs.com/hutaoer/p/3423782.html" target="_blank">setTimeout中this的指向问题</a>
