--- a/_posts/2015-08-10-js-this.md
+++ b/_posts/2015-08-10-js-this.md
@@ -18,7 +18,7 @@ category: "javascript"
 
 <!-- more -->
 
-但是不管函数是按哪种方法来调用的，**请记住一点：谁调用这个函数或方法,this关键字就指向谁。**
+但是不管函数是按哪种方法来调用的，**请记住一点：谁调用这个函数或方法，this关键字就指向谁。**
 
 接下来就分情况来讨论下这些不同的情况：
 
@@ -33,8 +33,8 @@ function person(){
 person();  //输出  window  xl   
 ```
 
-在这段代码中`person`函数作为普通函数调用，实际上`person`是作为全局对象`window`的一个方法来进行调用的,即`window.person()`; <br>
-所以这个地方是`window`对象调用了`person`方法,那么`person`函数当中的`this`即指`window`,同时`window`还拥有了另外一个属性`name`,值为`xl`.
+在这段代码中`person`函数作为普通函数调用，实际上`person`是作为全局对象`window`的一个方法来进行调用的，即`window.person()`; <br>
+所以这个地方是`window`对象调用了`person`方法，那么`person`函数当中的`this`即指`window`，同时`window`还拥有了另外一个属性`name`，值为`xl`.
 
 ```js
 var name = "xl";
@@ -44,7 +44,7 @@ function person(){
 person(); //输出 xl
 ```
 
-同样这个地方`person`作为`window`的方法来调用，在代码的一开始定义了一个全局变量`name`，值为`xl`,它相当于`window`的一个属性,即`window.name="xl"`,又因为在调用`person`的时候`this`是指向`window`的，因此这里会输出`xl`.
+同样这个地方`person`作为`window`的方法来调用，在代码的一开始定义了一个全局变量`name`，值为`xl`，它相当于`window`的一个属性，即`window.name="xl"`，又因为在调用`person`的时候`this`是指向`window`的，因此这里会输出`xl`.
 
 ###作为对象的方法来调用
 
@@ -65,7 +65,7 @@ person.showName();  //输出  xl
 
 var showNameA = person.showName;
 showNameA();    //输出  XL
-//这里将person.showName方法赋给showNameA变量，此时showNameA变量相当于window对象的一个属性，因此showNameA()执行的时候相当于window.showNameA(),即window对象调用showNameA这个方法，所以this关键字指向window
+//这里将person.showName方法赋给showNameA变量，此时showNameA变量相当于window对象的一个属性，因此showNameA()执行的时候相当于window.showNameA()，即window对象调用showNameA这个方法，所以this关键字指向window
 ```
 
 再换种形式：
@@ -198,7 +198,7 @@ var person = new Person("xl");
 person.sayName(); //输出 “my name is xl”;
 ```
 
-这里`setTimeout(function(){console.log(this.name)}.bind(this),50);`,匿名函数使用`bind(this)`方法后创建了新的函数，这个新的函数不管在什么地方执行，`this`都指向的`Person`,而非`window`,因此最后的输出为`"my name is xl"`而不是`"my name is XL"`
+这里`setTimeout(function(){console.log(this.name)}.bind(this),50);`，匿名函数使用`bind(this)`方法后创建了新的函数，这个新的函数不管在什么地方执行，`this`都指向的`Person`，而非`window`，因此最后的输出为`"my name is xl"`而不是`"my name is XL"`
 
 另外几个需要注意的地方： <br>
 `setTimeout/setInterval/匿名函数执行`的时候，`this`默认指向`window对象`，除非手动改变this的指向。在《javascript高级程序设计》当中，写到：“超时调用的代码(`setTimeout`)都是在全局作用域中执行的，因此函数中的this的值，在非严格模式下是指向window对象，在严格模式下是指向undefined”。本文都是在非严格模式下的情况。
