--- a/_posts/2015-09-28-js-encode.md
+++ b/_posts/2015-09-28-js-encode.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: JS中的escape,encodeURI,encodeURIComponent三个函数的区别
+title: escape、encodeURI和encodeURIComponent的区别
 description: javascript中的编码函数：escape,encodeURI,encodeURIComponent和unescape,decodeURI,decodeURIComponent的介绍
 keywords: javascript, 基础, 编码
 category: "javascript"
@@ -9,6 +9,8 @@ category: "javascript"
 最近在项目中用到对一段url进行编码，因此整理如下：
 
 js中对文字的编码涉及3个函数：<a href="http://www.w3school.com.cn/jsref/jsref_escape.asp" target="_blank" title="">escape</a> , <a href="http://www.w3school.com.cn/jsref/jsref_encodeuri.asp" target="_blank" title="">encodeURI</a> , <a href="http://www.w3school.com.cn/jsref/jsref_encodeURIComponent.asp" target="_blank" title="">encodeURIComponent</a>，与之对应的解码函数为：<a href="http://www.w3school.com.cn/jsref/jsref_unescape.asp" target="_blank">unescape()</a>，<a href="http://www.w3school.com.cn/jsref/jsref_decodeURI.asp" target="_blank">decodeURI()</a>，<a href="http://www.w3school.com.cn/jsref/jsref_decodeURIComponent.asp" target="_blank">decodeURIComponent()</a>。
+
+<!-- more -->
 
 w3school对其说明如下：
 
