--- a/_posts/2015-10-27-js-bubble.md
+++ b/_posts/2015-10-27-js-bubble.md
@@ -10,6 +10,8 @@ category: "javascript"
 
 核心思想：每次比较相邻的两个值，若后面的值比前面的值小，则交换位置，重复此操作，直到数据从小到大排列看起来像水泡一样冒上去了！
 
+<!-- more -->
+
 ####如何交换数据位置？
 
 #####使用临时变量
