--- a/_posts/2016-03-28-html-font.md
+++ b/_posts/2016-03-28-html-font.md
@@ -15,7 +15,7 @@ category: "html"
 - 用于CSS文件中，但是需要用反斜杠`\`转义；
 - 用于JavaScript，和CSS用法一样，不过要用`\u`来转义。
 
-####需要注意的是：
+####需要注意：
 
 - 有的字符在不同的浏览器下表现不太一样；比如小雪人 ☃ 在Firefox和Chrome下不太一样，钻石 ◆ 在IE下要比Chrome下要大一点儿；
 - 有的字符在某个浏览器下不会显示；当然原因并不是字符代码的问题，而是浏览器的bug，比如，–在Chrome下。
