--- a/_posts/2016-03-28-html-font.md
+++ b/_posts/2016-03-28-html-font.md
@@ -4071,5 +4071,6 @@ td, th{ text-align: center;}
 - [W3School HTML 4.01 符号实体](http://www.w3school.com.cn/tags/html_ref_symbols.html)
 - [HTML特殊字符编码对照表](http://www.jb51.net/onlineread/htmlchar.htm)
 - [大神张鑫旭整理的](http://www.zhangxinxu.com/sp/character.html)
+- [U2600.pdf](http://www.unicode.org/charts/PDF/U2600.pdf)
 
 转自：<a target="_blank" href="http://blog.csdn.net/realghost/article/details/11613649">http://blog.csdn.net/realghost/article/details/11613649</a>
