--- a/_posts/2016-06-22-js-tricks.md
+++ b/_posts/2016-06-22-js-tricks.md
@@ -3,7 +3,7 @@ layout: post
 title: Javascript Tricks
 description: javascript tricks, javascript 小技巧
 keywords: javascript
-category: "js"
+category: "javascript"
 ---
 
 在这篇文章中将整理一些平时用到的js小技巧。这些小技巧可能在你的实际工作中或许能帮助你解决一些问题。
