--- a/_posts/2016-01-12-sass-note.md
+++ b/_posts/2016-01-12-sass-note.md
@@ -37,6 +37,8 @@ Encoding.default_external = Encoding.find('utf-8')
 ```
 放在所有的require XXXX 之后即可。
 
+<!-- more -->
+
 **2.命令行工具同理**
 
 找到ruby的安装目录，里面也有sass模块，如这个路径：
