--- a/_posts/2016-02-29-h5-web-keng.md
+++ b/_posts/2016-02-29-h5-web-keng.md
@@ -44,6 +44,8 @@ div {
 }
 ```
 
+<!-- more -->
+
 #### 禁止用户选中文字
 
 ```css
@@ -154,7 +156,7 @@ input:focus::-webkit-input-placeholder{
 
 #### 横屏 & 竖屏
 
-**事件：**
+事件：
 window.orientation，取值：正负90表示横屏模式、0和180表现为竖屏模式；
 
 ```js
@@ -170,6 +172,8 @@ window.onorientationchange = function(){
     }
 }  
 ```
+
+样式：
 
 ```css
 //竖屏时使用的样式
