--- a/_posts/2016-06-22-js-tricks.md
+++ b/_posts/2016-06-22-js-tricks.md
@@ -28,6 +28,8 @@ console.log(emptyAccount.hasMoney); // false
 
 在这个示例中，只要`account.cash`的值大于`0`，那么`account.hasMoney`返回的值就是`true`。
 
+<!-- more -->
+
 ### 使用+将字符串转换成数字
 
 这个技巧非常有用，其非常简单，可以交字符串数据转换成数字，不过其只适合用于字符串数据，否则将返回NaN，比如下面的示例：
