--- a/_posts/2016-03-28-js-raf.md
+++ b/_posts/2016-03-28-js-raf.md
@@ -18,6 +18,8 @@ category: "web"
 - 浏览器可以优化并行的动画动作，更合理的重新排列动作序列，并把能够合并的动作放在一个渲染周期内完成，从而呈现出更流畅的动画效果。比如，通过requestAnimationFrame()，JS动画能够和CSS动画/变换或SVG SMIL动画同步发生。
 - 另外，如果在一个浏览器标签页里运行一个动画，当这个标签页不可见时，浏览器会暂停它，这会减少CPU，内存的压力，节省电池电量。
 
+<!-- more -->
+
 #### 和setTimeout、setInterval的区别
 
 - setInterval、setTimeout是开发者主动要求浏览器去绘制，但是由于种种问题，浏览器可能会漏掉部分命令
