add unicode page

--- a/_posts/2015-09-25-web-note.md
+++ b/_posts/2015-09-25-web-note.md
@@ -8,10 +8,10 @@ category: "web"
 
 <style>
 .lotus-post h2{}
-.lotus-post h3{ font-size: 22px;}
-.lotus-post h4{ font-size: 16px;}
-.lotus-post ul{ margin-left: 2em; margin-bottom: 5px;}
-.lotus-post li{ font-size: 14px;}
+.lotus-post h3{ font-size: 1.3em;}
+.lotus-post h4{ margin-left: 2em; font-size: 1.1em;}
+.lotus-post ul{ margin-left: 5.5em; margin-bottom: 5px;}
+.lotus-post li{ font-size: 0.9em;}
 .lotus-post p{ margin-bottom: 0.2em;}
 </style>
 
@@ -145,4 +145,3 @@ $(document).ready(function() {
 ### 杂谈
 
 - [程序员装B指南手册](http://ziren.org/hobby/the-programmer-loaded-b-guidebook.html)
-- [初入行Web前端开发新手必读](http://www.w3cfuns.com/article-1844-1-1.html)
