--- a/_posts/2016-02-29-h5-web-keng.md
+++ b/_posts/2016-02-29-h5-web-keng.md
@@ -17,23 +17,23 @@ dd:before{
 }
 </style>
 
-#### Meta标签
+## Meta标签
 
 ```html
-//让页面强制让文档的宽度与设备的宽度保持1:1，并且文档最大的宽度比例是1.0，且不允许用户点击屏幕放大浏览。
+<!--让页面强制让文档的宽度与设备的宽度保持1:1，并且文档最大的宽度比例是1.0，且不允许用户点击屏幕放大浏览。-->
 <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0;" name="viewport" />
 
-//是否添加至主屏幕的页面允许全屏模式浏览；
+<!--是否添加至主屏幕的页面允许全屏模式浏览；-->
 <meta content="yes" name="apple-mobile-web-app-capable" />
 
-//指定的iphone中safari顶端的状态条的样式；
+<!--指定的iphone中safari顶端的状态条的样式；-->
 <meta content="black" name="apple-mobile-web-app-status-bar-style" />
 
-//关闭数字自动识别为电话号码
+<!--关闭数字自动识别为电话号码-->
 <meta content="telephone=no" name="format-detection" />
 ```
 
-#### 触摸并按住触摸目标时候，禁止或显示系统默认菜单
+## 触摸并按住触摸目标时候，禁止或显示系统默认菜单
 
 在iOS上，当你触摸并按住触摸的目标，比如一个链接，Safari浏览器将显示链接有关的系统默认菜单。这个属性可以让你禁用系统默认菜单。
 参考自：<a href="http://www.css88.com/book/css/webkit/behavior/touch-callout.htm" target="_blank">http://www.css88.com/book/css/webkit/behavior/touch-callout.htm</a>
@@ -46,7 +46,7 @@ div {
 
 <!-- more -->
 
-#### 禁止用户选中文字
+## 禁止用户选中文字
 
 ```css
 p{
@@ -57,7 +57,7 @@ p{
 
 可参考：<a href="http://www.css88.com/book/css/properties/user-interface/user-select.htm" target="_blank">http://www.css88.com/book/css/properties/user-interface/user-select.htm</a>
 
-#### 使用特殊链接
+## 使用特殊链接
 
 如果你关闭自动识别后 ，又希望某些电话号码能够链接到 iPhone 的拨号功能 ，那么可以通过这样来声明电话链接，
 
@@ -73,14 +73,14 @@ p{
 <td onclick="location.href='tel:122'"></td>
 ```
 
-#### 去除URL的控件条
+## 去除URL的控件条
 
 ```js
 setTimeout(scrollTo,0,0,0);
 ```
 
 
-#### 获取滚动条的值
+## 获取滚动条的值
 
 pc端获取浏览器的滚动条是通过`document.scrollTop`&`document.scrollLeft`，但在ios中这两个值是未定义的，因为ios中没有滚动条的概念，Android中通过这两个属性可以正常获取到滚动条的值，那么在iOS中我们该如何获取滚动条的值呢？就是上面两个属性，但是事实证明android也支持这属性，所以索性都用：
 
@@ -88,7 +88,7 @@ pc端获取浏览器的滚动条是通过`document.scrollTop`&`document.scrollLe
 window.scrollY  window.scrollX
 ```
 
-#### Reset Styles
+## Reset Styles
 
 ```css
 body {
@@ -138,7 +138,7 @@ input:focus::-webkit-input-placeholder{
 }
 ```
 
-#### h5搜索键盘
+## h5搜索键盘
 
 经测试发现需要一下组合，可以使呼起的键盘具有“搜索”或“前往”字样。
 
@@ -154,7 +154,7 @@ input:focus::-webkit-input-placeholder{
 另外，如果要移除搜索框的叉叉图标，可以设置样式
 ::-webkit-search-cancel-button { display: none; }
 
-#### 横屏 & 竖屏
+## 横屏 & 竖屏
 
 事件：
 window.orientation，取值：正负90表示横屏模式、0和180表现为竖屏模式；
@@ -194,7 +194,7 @@ window.onorientationchange = function(){
 }
 ```
 
-#### audio & vedio在ios端自动播放
+## audio & vedio在ios端自动播放
 
 ```js
 var oAudio = new Audio('shake.mp3');
@@ -213,7 +213,7 @@ document.addEventListener('touchstart', fixaudio, false);
 具体讨论参考：<a href="http://www.cnblogs.com/PeunZhang/archive/2013/02/05/2893093.html" target="_blank">http://www.cnblogs.com/PeunZhang/archive/2013/02/05/2893093.html</a>
 
 
-#### 自动大写与自动修正
+## 自动大写与自动修正
 
 要关闭这两项功能，可以通过autocapitalize 与autocorrect 这两个选项：
 
@@ -221,7 +221,7 @@ document.addEventListener('touchstart', fixaudio, false);
 <input type="text" autocapitalize="off" autocorrect="off" /> 
 ```
 
-#### 文件上传, 从相机捕获媒体
+## 文件上传, 从相机捕获媒体
 
 ```html
 <input type="file" accept = "image/*; capture=camera" />
@@ -236,7 +236,7 @@ document.addEventListener('touchstart', fixaudio, false);
  : input控件默认外观丑陋
 
 
-#### 基于css的原生滚动
+## 基于css的原生滚动
 
 ```css
 ul {
@@ -249,7 +249,7 @@ ul::-webkit-scrollbar {    /* 隐藏滚动条 */
 }
 ```
 
-#### 消除transition闪屏
+## 消除transition闪屏
 
 ```css
 div {
@@ -260,7 +260,7 @@ div {
 }
 ```
 
-#### 播放视频不全屏
+## 播放视频不全屏
 
 ```html
 <!--
@@ -273,14 +273,14 @@ div {
 <video x-webkit-airplay="true" webkit-playsinline="true" preload="auto" autoplay src="http://"></video>
 ```
 
-#### 滑屏框架
+## 滑屏框架
 
  - <a href="https://github.com/peunzhang/slip.js" target="_blank">slip.js</a>
  - <a href="https://github.com/peunzhang/iSlider" target="_blank">iSlider</a>
  - <a href="https://github.com/peunzhang/fullpage" target="_blank">fullpage</a>
  - <a href="http://www.swiper.com.cn/" target="_blank">swiper</a>
 
-#### 模拟:hover伪类
+## 模拟:hover伪类
 
 因为iPhone并没有鼠标指针，所以没有hover事件。那么CSS :hover伪类就没用了。但是iPhone有Touch事件，onTouchStart 类似 onMouseOver，onTouchEnd 类似 onMouseOut。所以我们可以用它来模拟hover。使用Javascript：
 
@@ -300,7 +300,7 @@ a:hover, a.hover { /* 你的hover效果 */ }
 
 这样设计一个链接，感觉可以更像按钮。并且，这个模拟可以用在任何元素上。
 
-#### 判断设备类型
+## 判断设备类型
 
 ```js
 //方法一：
@@ -339,7 +339,7 @@ if (agentID.indexOf("android") >= 0) {
 }
 ```
 
-#### flex属性
+## flex属性
 
 假设flex容器为`.box` ，子元素为`.item`，兼容性自行添加
 
