--- a/_posts/2017-03-01-date-keng.md
+++ b/_posts/2017-03-01-date-keng.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: new Date()在移动端的坑
+title: Date（日期）对象在移动端的坑
 description: new Date()在pc和移动端的一些显示差异
 keywords: javascript date keng
 category: "javascript"
