--- a/_posts/2017-07-07-flex-tool.md
+++ b/_posts/2017-07-07-flex-tool.md
@@ -8,4 +8,4 @@ category: "tool"
 
 最近做项目时老是觉得要不停的查flex属性用法，甚至不爽。一怒之下写了个工具。
 
-传送么：<a href="/demo/flex-too.html" target="_blank">flex-tool</a>
+传送门：<a href="/demo/flex-too.html" target="_blank">flex-tool</a>
