--- a/_posts/2017-08-17-gulp-rev.md
+++ b/_posts/2017-08-17-gulp-rev.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: gulp-rev版本替换笔记
-description: gulp-rev, gulp-rev-collector, gulp
+description: gulp-rev gulp-rev-collector gulp
 keywords: tool
 category: "tool"
 ---
