--- a/source/_posts/2016-06-22-js-tricks.md
+++ b/source/_posts/2016-06-22-js-tricks.md
@@ -132,7 +132,7 @@ if ('querySelector' in document) {
 var oEvent = {
      start : "ontouchstart" in document ? 'touchstart' : 'mousedown',
      end : "ontouchend" in document ? 'touchend' : 'mouseup'
-}
+};
 ```
 
 在这个示例中，如果`document`不存在`querySelector`函数，那么就会调用`docuemnt.getElementById("id")`。
@@ -155,9 +155,9 @@ console.log(array.slice(-3)); // [4,5,6]
 
 复制数组有三种方法：
 
- - 1.通过`Array.prototype.slice()方法`，该方法因为不对原数组进行操作，可以通过传入参数0或者不传的方式复制；
- - 2.通过`Array.prototype.concat()方法`，该方法通过不传参来实现数组的合并以实现复制；
- - 3.最笨的方法，循环遍历老数组，再一个个`push`到新数组中；
+1. 通过`Array.prototype.slice()方法`，该方法因为不对原数组进行操作，可以通过传入参数0或者不传的方式复制；
+2. 通过`Array.prototype.concat()方法`，该方法通过不传参来实现数组的合并以实现复制；
+3. 最笨的方法，循环遍历老数组，再一个个`push`到新数组中；
 
 ```js
 //方法1：
