--- a/source/_posts/2017-03-01-date-keng.md
+++ b/source/_posts/2017-03-01-date-keng.md
@@ -1,18 +1,19 @@
 ---
 layout: post
-title: Date（日期）对象在移动端的坑
+title: Date对象在移动端的坑
 description: new Date()在pc和移动端的一些显示差异
 keywords: javascript date keng
 tags:
  - bug
  - javascript
+ - 坑
 categories:
  - javascript
 ---
 
-## 声明
+本文描述了工作中涉及`Date`对象都是一些坑的写法。
 
-本文主要描述我在工作中遇到的关于`new Date()`的一些坑，因为涉及移动端的测试，各端`userAgent`如下：
+涉及移动端，测试时`userAgent`如下：
 
 **PC**
 
@@ -97,6 +98,6 @@ NaN === NaN     // false
 
 ## 总结
 
-- `new Date的24:00:00`在移动端&`PC(safari)`浏览器中会被视为无效时间
+- `new Date`的`24:00:00`在移动端&`PC(safari)`浏览器中会被视为无效时间
 - `2017-03-01 12:00:00`的横线写法在移动端&`PC(safari)`浏览器中会被视为无效时间
 - 无效时间经过时间戳转换后会变为NaN
