--- a/source/_posts/2017-09-14-gulp-rev.md
+++ b/source/_posts/2017-09-14-gulp-rev.md
@@ -18,6 +18,7 @@ categories:
 2. 通过对`js`,`css`文件内容进行`hash`运算，生成一个文件的唯一`hash`字符串(如果文件修改则`hash`号会发生变化)；
 3. 替换`html`中的`js`,`css`文件名，生成一个带版本号的文件名。
 
+<!-- more -->
 ### `gulp-rev`
 
 将资源文件（`css`、`js`、`images`等）解析，生成一个`rev.json`，大致如下：
