--- a/source/_posts/2018-01-17-Charles-备忘.md
+++ b/source/_posts/2018-01-17-Charles-备忘.md
@@ -17,6 +17,7 @@ categories:
 
 去`Charles`的 [官方网站](http://www.charlesproxy.com)下载最新版的`Charles`安装包，是一个 dmg 后缀的文件。打开后将`Charles`拖到 Application 目录下即完成安装。
 
+<!-- more -->
 
 ## 将`Charles`设置成系统代理
 
