--- a/source/_posts/2018-02-01-如何在Mac OS中启动IPv6.md
+++ b/source/_posts/2018-02-01-如何在Mac OS中启动IPv6.md
@@ -14,6 +14,8 @@ categories:
 
 进入[IPv6 Mac](https://github.com/XX-net/XX-Net/wiki/IPv6-Mac)，使用的第一种方法`teredo`。
 
+<!-- more -->
+
 先安装`miredo`，但是我的mac版本是`10.13.1`，提示软件与系统不兼容，处理方法：
 
 1. 重启`mac`，进入恢复模式（重启后长按`Command + R`）,`x`掉中间的弹层；
@@ -43,4 +45,5 @@ categories:
 在本地页面中出现`XX-Net 3.9.6，一切正常，你可以访问真正的互联网了。`，就表示可以科学上网了~
 
 
+**注意**，如果合上电脑再打开，发现程序失效，请重启`XX-Net`
 
